Handle invalid attributes in AbstractReaderWriter so that each SBase.readAttributes method are simplified